force-app/main/default/objects/Customer_Org_Info__c/Customer_Org_Info__c.object-meta.xml
<CustomObject>
    <label>Customer Org Info</label>
    <nameField>
        <displayFormat>Org-{0000}</displayFormat>
        <label>Customer Org Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Org Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>