force-app/main/default/objects/Customer_Org_Info__c/fields/ConnectionInfo__c.field-meta.xml
<CustomField>
    <fullName>ConnectionInfo__c</fullName>
    <label>ConnectionInfo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>