force-app/main/default/objects/Customer_Org_Info__c/fields/EventCount__c.field-meta.xml
<CustomField>
    <fullName>EventCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EventCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>