force-app/main/default/objects/Customer_Org_Info__c/fields/LastConnectionDate__c.field-meta.xml
<CustomField>
    <fullName>LastConnectionDate__c</fullName>
    <label>LastConnectionDate</label>
    <type>DateTime</type>
</CustomField>