force-app/main/default/objects/Customer_Org_Info__c/fields/LastConnectionSuccess__c.field-meta.xml
<CustomField>
    <fullName>LastConnectionSuccess__c</fullName>
    <defaultValue>true</defaultValue>
    <label>LastConnectionSuccess</label>
    <type>Checkbox</type>
</CustomField>