force-app/main/default/objects/Customer_Org_Info__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>