force-app/main/default/objects/Customer_Org_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Org_Id__c</columns>
    <columns>Username__c</columns>
    <columns>IsActive__c</columns>
    <columns>EventCount__c</columns>
    <columns>ConnectionInfo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>